--- a/index.html
+++ b/index.html
@@ -491,9 +491,14 @@ function requestChaPicInfo () {
                 if (jsonObj['error'] == 0) {
                     var group0 = jsonObj['group0'];
                     var group1 = jsonObj['group1'];
+                    console.log('group0 = ' + group0 + ' group1=' + group1);
 
                     for(var i=0; i<4; i++) {
-                        document.getElementById('icon_0_' + i).src = 'asset/tj_0_'+ i + '_'+ ((group0 & (1 << i) == 0) ? '0' : '1') + '.png';
+                        var xxx = group0 & (1 << i);
+                        var tmp = 'asset/tj_0_'+ i + '_'+ ((group0 & (1 << i) == 0) ? '0' : '1') + '.png';
+                        console.log('xxx[' + i + ']=' + xxx + ' src=' + tmp);
+                        
+                        document.getElementById('icon_0_' + i).src = tmp;
                     }
                     
                     for(var i=0; i<3; i++) {
