--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ function requestChaPicInfo () {
 
                     for(var i=0; i<4; i++) {
                         var xxx = group0 & (1 << i);
-                        var tmp = 'asset/tj_0_'+ i + '_'+ ((group0 & (1 << i) == 0) ? '0' : '1') + '.png';
+                        var tmp = 'asset/tj_0_'+ i + '_'+ ((group0 & (1 << i) == 0) ? 0 : 1) + '.png';
                         console.log('xxx[' + i + ']=' + xxx + ' src=' + tmp);
 
                         document.getElementById('icon_0_' + i).src = tmp;
