--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="opacity_cover"></div>
 
         <div id="dialog">
-            <div style="background-color:white">
+            <div style="background-color:white;text-align:right;">
                 <img class="close_btn" src='asset/close.png' onclick="onCloseBtnClicked()">
             </div>
             <div id="list">
