--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="opacity_cover"></div>
 
         <div id="dialog">
-            <div class="div_close">
+            <div id="dclose">
                 <img class="close_btn" src='asset/close.png' onclick="onCloseBtnClicked()">
             </div>
             <div id="list">
