--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ $(document).ready(function(){
     CurStageId = getQueryString('cid');
     UserId = getQueryString('user_id');
     console.log('starting at ' + StartTime + ' sid=' + CurStageId + ' uid=' + UserId);
-    debugInfo.innerHTML('starting at ' + StartTime + ' sid=' + CurStageId + ' uid=' + UserId);
+    debugInfo.innerHTML = 'starting at ' + StartTime + ' sid=' + CurStageId + ' uid=' + UserId;
 
     requestChaPicInfo();
 });
