somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2 class="title" id="result_title">欢乐找茬</h2>
 
         <img src="asset/default_result.png" id="result_info_img"/>
-        <img src="asset/btn_tj_0.png" id="btn_join" onclick="onJoin()"/>
+        <img src="asset/btn_tj_0.png" id="btn_join" onclick="onTuJian()"/>
     </div>
 
     <div class="popup" id="view_tujian">
