somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@ function requestChaPicInfo () {
         var timeRepay = tsCur - TS_Enter;
         console.log('tsCur=' + tsCur + ' tsEnter=' + TS_Enter + ' repay=' + timeRepay);
 
+        debugInfo.innerHTML = 'time repay ' + timeRepay;
+
         StartTime += timeRepay;// + TIMING_REPAY_PLUS;
 
         for (var i=0; i< StageList.length; i++) {
