--- a/index.html
+++ b/index.html
@@ -233,15 +233,18 @@ function requestChaPicInfo () {
 
         registerTouchListener();
 
-        var tsCur = getCurTimeStamp();
+        if (TS_Enter != 0) {
+            var tsCur = getCurTimeStamp();
 
-        var timeRepay = tsCur - TS_Enter;
-        console.log('tsCur=' + tsCur + ' tsEnter=' + TS_Enter + ' repay=' + timeRepay);
+            var timeRepay = tsCur - TS_Enter;
+            console.log('tsCur=' + tsCur + ' tsEnter=' + TS_Enter + ' repay=' + timeRepay);
 
-        debugInfo.innerHTML = 'time repay ' + timeRepay;
+            debugInfo.innerHTML = 'time repay ' + timeRepay;
 
-        StartTime += timeRepay;// + TIMING_REPAY_PLUS;
-
+            StartTime += timeRepay;// + TIMING_REPAY_PLUS;
+            TS_Enter = 0;
+        }
+       
         for (var i=0; i< StageList.length; i++) {
             var stage =  StageList[i];
             if (stage ['sid'] == CurStageId) {
