somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ function requestChaPicInfo () {
             var timeRepay = tsCur - TS_Enter;
             console.log('tsCur=' + tsCur + ' tsEnter=' + TS_Enter + ' repay=' + timeRepay);
 
-            debugInfo.innerHTML = 'time repay ' + timeRepay;
+            // debugInfo.innerHTML = 'time repay ' + timeRepay;
 
             StartTime += timeRepay;// + TIMING_REPAY_PLUS;
             TS_Enter = 0;
