somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ function requestChaPicInfo () {
     function onJoin () {
         if (ActionRedirect != null) {
             window.location = ActionRedirect;
-            document.getElementById('btn_join').src = 'asset/join_1.png'
+            // document.getElementById('btn_join').src = 'asset/join_1.png'
         }
     }
 
