somthing done for taihe2_dev

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ $(document).ready(function(){
     Stat['st'] = TS_Enter;
 
     console.log('starting at ' + StartTime + ' sid=' + CurStageId + ' uid=' + UserId + ' scan=' + TS_Enter + ' lat=' + Stat['lat'] + ' lng' + Stat['lng']);
-    // debugInfo.innerHTML = 'starting at ' + StartTime + ' sid=' + CurStageId + ' uid=' + UserId;
+    console.log('nick name = ' + Stat['nick']);
 
     requestChaPicInfo();
 });
