--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ $(document).ready(function(){
     Stat['lng'] = getQueryString('lng');
     Stat['join_at'] = StartTime;
     Stat['uid'] = getQueryString('uid');
-    Stat['nick'] = decodeURI(getQueryString('nick'));
+    Stat['nick'] = getQueryString('nick');
     
     Stat['gender'] = getQueryString('gender');
     Stat['st'] = TS_Enter;
