somthing done for taihe2_dev

--- a/index.html
+++ b/index.html
@@ -436,8 +436,7 @@ function requestChaPicInfo () {
         var oImgBox = document.createElement("img");
         oImgBox.setAttribute("style", "width:" + IndWidth + "px;height:auto;position:fixed;left:" + (pickPos.x - IndWidth*0.5) + "px;top:" + (pickPos.y - IndWidth*0.5) + "px;");
         var imgPic = document.getElementById('pic');
-        imgPic.appendChild(oImgBox)
-        // insertAfter(oImgBox, imgPic);
+        insertAfter(oImgBox, imgPic);
 
         if(checkHit(pickPos) || false) {
             oImgBox.setAttribute("id", "correct");
