somthing done for taihe2_dev

--- a/index.html
+++ b/index.html
@@ -625,9 +625,9 @@ function requestChaPicInfo () {
             success: function (data) {
                 // console.log(data);
 
-                if (jsonObj['error'] != 0) {
-                    console.log('req tujian error');
-                }
+                // if (jsonObj['error'] != 0) {
+                //     console.log('req tujian error');
+                // }
             },
             error: function (XMLHttpRequest, textStatus, errorThrown) {
                 console.log('error');
