--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ function requestChaPicInfo () {
         }
 
         var oImgBox = document.createElement("img");
-        oImgBox.setAttribute("style", "width:" + IndWidth + "px;height:auto;position:fixed;left:" + (pickPos.x - IndWidth*0.5) + "px;top:" + (pickPos.y - IndWidth*0.5) + "px;");
+        oImgBox.setAttribute("style", "width:" + IndWidth + "px;height:auto;position:absolute;left:" + (pickPos.x - IndWidth*0.5) + "px;top:" + (pickPos.y - IndWidth*0.5) + "px;");
         var imgPic = document.getElementById('pic');
         insertAfter(oImgBox, imgPic);
 
