somthing done for taihe2

--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ function requestChaPicInfo () {
     function logStat () {
         console.log('logStat');
         $.ajax({
-            url: DevUrl,
+            url: MainUrl,
             type: "get",
             jsonType: "json",
             timeout: 10000,
