--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ function requestChaPicInfo () {
             token = hex_md5(ts);
             taiheUrl = ActionRedirect + "?openid=" + Stat['uid'] + "&token=" + token + "&ts=" + ts + "&nick=" + Stat['nick'];
             console.log('to ' + taiheUrl);
-            window.location = taiheUrl;
+            // window.location = taiheUrl;
             // document.getElementById('btn_join').src = 'asset/join_1.png'
         }
     }
