--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ function requestChaPicInfo () {
     function onJoin () {
         if (ActionRedirect != null) {
             ts = getCurTimeStamp();
-            token = hex_md5(ts);
+            token = hex_md5(''+ts);
             taiheUrl = ActionRedirect + "?openid=" + Stat['uid'] + "&token=" + token + "&ts=" + ts + "&nick=" + Stat['nick'];
             console.log('to ' + taiheUrl);
             // window.location = taiheUrl;
